*openttd-1.4.0_rc1 (01 Apr 2014)

  01 Apr 2014; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +openttd-1.4.0_rc1.ebuild, -openttd-1.4.0_beta5.ebuild:
  games-simulation/openttd: new rc

*openttd-1.4.0_beta5 (01 Mar 2014)

  01 Mar 2014; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +openttd-1.4.0_beta5.ebuild, -openttd-1.4.0_beta4.ebuild:
  games-simulation/openttd: bumped 1.4.0 beta5

*openttd-1.4.0_beta4 (10 Feb 2014)

  10 Feb 2014; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +openttd-1.4.0_beta4.ebuild, -openttd-1.4.0_beta3.ebuild:
  games-simulation/openttd: new beta version

*openttd-1.4.0_beta3 (22 Jan 2014)

  22 Jan 2014; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +openttd-1.4.0_beta3.ebuild, -openttd-1.4.0_beta2.ebuild:
  games-simulation/openttd: new beta

*openttd-1.4.0_beta2 (19 Jan 2014)

  19 Jan 2014; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +openttd-1.4.0_beta2.ebuild, -openttd-1.3.2.ebuild:
  games-simulation/openttd: version bump 1.4.0-beta2

*openttd-1.3.2_rc2 (15 Jul 2013)

  15 Jul 2013; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +openttd-1.3.2_rc2.ebuild, -openttd-1.3.2_rc1.ebuild:
  games-simulation/openttd: version bump

*openttd-1.3.2_rc1 (01 Jul 2013)

  01 Jul 2013; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +openttd-1.3.2_rc1.ebuild, -openttd-1.3.1.ebuild:
  games-simulation/openttd: version bump

*openttd-1.3.1 (01 Jun 2013)

  01 Jun 2013; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +openttd-1.3.1.ebuild, -openttd-1.3.1_rc1.ebuild:
  openttd: version bump

*openttd-1.3.1_rc1 (19 May 2013)

  19 May 2013; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +openttd-1.3.1_rc1.ebuild, -openttd-1.3.0.ebuild:
  games-simulation/openttd: version bump

*openttd-1.3.0 (01 Apr 2013)

  01 Apr 2013; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +openttd-1.3.0.ebuild:
  openttd: version bumb
