@@ -1,23 +1,23 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST openttd-1.4.0-RC1-source.tar.gz 10044811 SHA256 2a6e5a795aa58e9ec438ebb41f8e26337d43e04c291397c232b8de1c582a5da0 SHA512 2042831eb82acecc34aa26468940017b1655a6ce67431ac9a7eb33e810fd94f4fcb80fa5988199b46ecc49f06ba6ff0cc6363f4346c429dc230216a61b34e5f7 WHIRLPOOL db982e84f185cc66084dab1fcf09af6b60d866ab8aed896944018d04674df98cbf4f0c78241dbbdb543a1a0e295b4e4863a187868e1cd185e4264f8abb1a5e1d
+DIST openttd-1.4.0-source.tar.gz 10043877 SHA256 bc50bbf573c0799bdcdbb53b3a6bd091b988f8df0bf79c0e71ef3ebb112dce9c SHA512 f11f32a45084d285271e692bd1533b3fed901ed799224335101ee298e9b9144934490d84dd9642130f0ea9ec0166e4d5c6e4211a021fcd11d79146b78259a2a5 WHIRLPOOL 6b5ce23a99ce8571dc2245a056c01dfd7867ced3add70b64ab9de04122683527dde8cb2e929725e38421884198de8e233a975477b40e6626bb45583f9fe28bef
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQJ8BAEBCABmBQJTOn+2XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJTO7zpXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ0NEM5MDM0MjM5MkNDRUI1NUFEQjYyMTIy
-RjA0RTMxRjA3MjAxRTdEAAoJEC8E4x8HIB59jT8QAKj7g1e14hrQ7UtK5qLugOGI
-0Rop2X3ZDhjg46FgiYt4CISiLU/ZmINJzVRW/5HyW0cuB9I7kSZNFHQNoYl78tPb
-ZnbvCZyQhf0QXJuIqv+edaJ2NqMR+ZHsz9EKEW40eOjGmQDyCc8f5dAow7Z9SOUt
-uH29P8I+szrmLzTXwiw9in7cNZ+dLdWN2zQIBEu/JrlpnsZ0C79eF0nZs855Zq2x
-DIx/N2Yt4c9L1V7uYdasBKAgL9clvvzD6qs4fRAsFsT4ctCh5e9Vf+ope622fVtB
-xWW9a+RSyRzzBGZhlGR7xN4YHQCc/YbRMY8a6bjvzJVrxNbEjZHfbmvM+wrmoWI+
-W2cb89Uob8cL+b55JmDBq00+0TS4khZja44DA1lJgsVlfI2iqe2wsiqC3ObMwetm
-R72GKS1Tqr7OFXr01VYIDNa8L32dFVraZjMFY4Vmf/uOHkoFYIo/Ourhhpgx7WIo
-Xg7BD+VYn1RxNQqDwmJaRK6gVGe86SnOl6Ee/Auy9KAlxZ5ZJkM72p8bYGqFGv9Q
-TWCS3L7p8t3ggFXF74+vo+bG8lxoo0r2BQ/qYzVkezGKFJkuvvzdv1FvcEMAT6v+
-1XYxrA+wfVGmVcKFgD9pvq4zz+o4r3pR/UxdvdiI6YMqr5F5sjaWlFxjHxsYxS6H
-ET4MtTySp02BrPk/U5mr
-=uJb3
+RjA0RTMxRjA3MjAxRTdEAAoJEC8E4x8HIB59tG4P/i2Qk9XoKR8zftUXlltIVp4r
+ClXFUXR76kMEeQ3qc6zgWM0qdx1dGr0T1W2q569rbuLKxl3ZxRlMrjk61AvYU74a
+3Wd+pL4Y64YnGXygqdwazSZpaTOOJN85JgTNZjbzWBECLdzeJapPj0Ry1cBMvQ3N
+Mgc5q9pMuSYyHWFwrWQ+GvLgesHs0ZAMlya9NfRdXMyFA6SMRbJgpHoIzGUwG/HY
+hPZTrOvzPdYBip/Zx/H2tDYMfyvVZDvGrbMaOEIZAKFqZ7XR1WXCbiuC5dBJZ4OB
+ogjdR6WsKSISCx5VgpYw049Vkm4KzA23HfCY9lfakE5r9jQ9A/bn2KZ8x/Rn4ZeI
+dD5QxlE5DWpXHqalUGcCnL+qBHII/ihlGJPnK7fZxzyVEaOQBXvn+qvN0XHgd/5i
+54KXfQ2TfItjXbRdysTpfiLVRGLak5Bin+7htozMr1YEeWx8qSqS0C4AeMCjWezt
+S0kjkBjSn7l6Fh6CuppmH/6Wxd8xzk4pmGRSjgMVSmpcq5o5KqzU4XStmxgieCT6
+SJUePYAtm5n8cxOOxHM6FJwVzGnY7vYMfge7TCjj2/lVUNUdQ93hhK6iHbx0cort
+WyZlj4+sYm79IGa5ybVd3ENejU1LOu/YrTdBDqlsZljbcQ/556hE6S7Jt/CWF8C7
+Ed5DuNy+WjrZEdiha0qZ
+=niri
 -----END PGP SIGNATURE-----
